# Computer_Vision_Questions

./: README.md
0.test/: CMakeLists.txt  main.cpp
1.split/: CMakeLists.txt  main.cpp  readme.md
2.thresholding/: CMakeLists.txt  main.cpp  readme.md
3.kernel/: CMakeLists.txt  main.cpp  readme.md
4.contours/: main.cpp  readme.md
5.light_blob/: LightBlob.hpp  main.cpp  readme.md
